@@ -43,6 +43,7 @@ I owe these people/groups my thanks for help with GeSHi. Thanks, guys!
 
 PEOPE WHO MADE LANGUAGE FILES
 
+- ABAP                   Andres Picazo
 - Actionscript           Steffen Krause (french translation by NikO)
 - Ada                    Tux
 - Apache                 Tux
